--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,9 +1,10 @@
-.footer {
-    background:#00FF00;
-    height:60px;
-    width:100%;
-    position:absolute;
-    bottom:0;
-    text-align:center;
-    line-height:60px
+footer {
+    background-color: white;
+    height: 60px;
+    width: 100%;
+    border-top: 1px #CCCCCC solid;
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    line-height: 60px;
 }
