--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,5 +1,19 @@
-.header {
-    background:#FF0000;
-    height:70px;
-    width:100%;
+header {
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border-bottom: 1px #CCCCCC solid;
+    line-height: 70px;
+}
+
+a.logo {
+    background-image: url("../images/logo.png");
+    background-repeat: no-repeat;
+    background-position: left;
+    display: inline-block;
+    width: 100%;
+    height: 60px;
+    left: 20px;
+    vertical-align: middle;
+    position: relative;
 }
